fixed dashboard overflow

--- a/src/scss/pages/_dashboard.scss
+++ b/src/scss/pages/_dashboard.scss
@@ -11,7 +11,7 @@ span, a{
 }
 
 .dashboard-page{
-    margin-left: 110px;
+    padding-left: 110px;
 }
 
 .dashboard-container {
